--- a/wp-content/themes/fourpoint/assets/stylesheets/sass/regions/_header.scss
+++ b/wp-content/themes/fourpoint/assets/stylesheets/sass/regions/_header.scss
@@ -39,8 +39,6 @@ header {
 		width: auto;
 	}
 	img {
-		width: auto;
-		height: 100%;
 		@include tablet-portrait-and-up {
 			float: right;
 		}
