--- a/wp-content/themes/fourpoint/assets/stylesheets/sass/regions/_nav.scss
+++ b/wp-content/themes/fourpoint/assets/stylesheets/sass/regions/_nav.scss
@@ -87,7 +87,7 @@ nav {
 				margin: 0;
 				li {
 					display: inline-block;
-					margin: 0 12px;
+					margin: 0 15px;
 					a {
 						text-transform: uppercase;
 						font-weight: bold;
